--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,49 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300,400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
-<body>
 
+<body>
+    <header class="header">
+        <div class="barra contenedor">
+            <div class="barra__logo">
+                <p class="barra__nombre">AirBNB</p>
+            </div>
+            <nav class="barra__navegacion">
+                <a class="barra__link" href="#">Lugares para hospedarte</a>
+                <a class="barra__link" href="#">Experiencias</a>
+                <a class="barra__link" href="#">Experiencias en Linea</a>
+            </nav>
+            <nav class="barra__login">
+                <a class="barra__link" href="#">Hazte Anfitrión</a>
+            </nav>
+        </div>
+        <form class="formulario contenedor">
+            <div class="formulario__campo">
+                <label for="ubicacion" class="formulario__label">Ubicación</label>
+                <input type="text" class="formulario__input" id="ubicacion" placeholder="A donde viajas?">
+            </div>
+            <div class="formulario__campo">
+                <label for="llegada" class="formulario__label">Llegada</label>
+                <input type="date" class="formulario__input" id="llegada">
+            </div>
+            <div class="formulario__campo">
+                <label for="salida" class="formulario__label">Salida</label>
+                <input type="date" class="formulario__input" id="salida">
+            </div>
+            <div class="formulario__campo">
+                <label for="huespedes" class="formulario__label">Huéspedes</label>
+                <input type="number" class="formulario__input" id="huespedes" placeholder="Cuantos?">
+            </div>
+            <div class="formulario__campo">
+                <input type="submit" class="formulario__submit" value="Buscar">
+            </div>
+        </form>
+
+        <div class="header__busqueda contenedor">
+            <p class="header__busqueda-label">¿No sabes a donde ir?</p>
+            <a href="#" class="header__busqueda-boton">Búsqueda Flexible</a>
+        </div>
+    </header>
 </body>
+
 </html>
