--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
         <h2 class="lugares__heading">Vive en cualquier lugar del mundo</h2>
         <div class="lugares__grid">
             <div class="lugar">
-                <img src="build/img/vive_1.jpg" alt="imagen seccion vive">
+                <img class="lugar__imagen" src="build/img/vive_1.jpg" alt="imagen seccion vive">
                 <p class="lugar__nombre">Escapadas al aire libre</p>
             </div>
             <div class="lugar">
-                <img src="build/img/vive_2.jpg" alt="imagen seccion vive">
+                <img class="lugar__imagen" src="build/img/vive_2.jpg" alt="imagen seccion vive">
                 <p class="lugar__nombre">Alojamientos únicos</p>
             </div>
             <div class="lugar">
-                <img src="build/img/vive_3.jpg" alt="imagen seccion vive">
+                <img class="lugar__imagen" src="build/img/vive_3.jpg" alt="imagen seccion vive">
                 <p class="lugar__nombre">Alojamientos enteros</p>
             </div>
             <div class="lugar">
-                <img src="build/img/vive_4.jpg" alt="imagen seccion vive">
+                <img class="lugar__imagen" src="build/img/vive_4.jpg" alt="imagen seccion vive">
                 <p class="lugar__nombre">Con tu mascota</p>
             </div>
         </div>
