--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
             </div>
         </div>
     </section>
+    <section class="anfitrion contendor seccion">
+        <div class="anfitrion__contenido">
+            <h2 class="anfitrion__heading">Anímate a ser anfitrión</h2>
+            <p class="anfitrion__texto">Comparte tu espacio para ganar dinero extra y aporvehcar nuevas oportunidades
+            </p>
+            <a href="#" class="anfitrion__enlace">Más Información</a>
+        </div>
+    </section>
 </body>
 
 </html>
