--- a/index.html
+++ b/index.html
@@ -160,6 +160,75 @@
             <a href="#" class="anfitrion__enlace">Más Información</a>
         </div>
     </section>
+    <main class="experiencias contenedor seccion">
+        <h2 class="experiencias__heading">Descubre Experiencias</h2>
+        <p class="experiencias__descripcion">Actividades únicas con expertos locales, en persona o en línea</p>
+        <div class="experiencias__listado">
+            <div class="experiencia">
+                <img class="experiencia__imagen" src="build/img/experiencia_1.jpg" alt="imagen experiencia">
+                <p class="experiencia__titulo">Experiencias</p>
+                <p class="esperiencia__descripcion">Actividades locales estés donde estés</p>
+            </div>
+            <div class="experiencia">
+                <img class="experiencia__imagen" src="build/img/experiencia_2.jpg" alt="imagen experiencia">
+                <p class="experiencia__titulo">Experiencias</p>
+                <p class="esperiencia__descripcion">Visita una ciudad y vive en ella</p>
+            </div>
+            <div class="experiencia">
+                <img class="experiencia__imagen" src="build/img/experiencia_3.jpg" alt="imagen experiencia">
+                <p class="experiencia__titulo">Experiencias en línea</p>
+                <p class="esperiencia__descripcion">Actividades interactivas en vivo</p>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer__grid contenedor">
+            <div class="footer__widget">
+                <h3 class="footer__heading">Acerca de</h3>
+                <nav class="footer__menu">
+                    <a class="footer__enlace" href="#">Enlace 1</a>
+                    <a class="footer__enlace" href="#">Enlace 2</a>
+                    <a class="footer__enlace" href="#">Enlace 3</a>
+                    <a class="footer__enlace" href="#">Enlace 4</a>
+                </nav>
+            </div>
+            <div class="footer__widget">
+                <h3 class="footer__heading">Comunidad</h3>
+                <nav class="footer__menu">
+                    <a class="footer__enlace" href="#">Enlace 1</a>
+                    <a class="footer__enlace" href="#">Enlace 2</a>
+                    <a class="footer__enlace" href="#">Enlace 3</a>
+                    <a class="footer__enlace" href="#">Enlace 4</a>
+                </nav>
+            </div>
+            <div class="footer__widget">
+                <h3 class="footer__heading">Anfitrion</h3>
+                <nav class="footer__menu">
+                    <a class="footer__enlace" href="#">Enlace 1</a>
+                    <a class="footer__enlace" href="#">Enlace 2</a>
+                    <a class="footer__enlace" href="#">Enlace 3</a>
+                    <a class="footer__enlace" href="#">Enlace 4</a>
+                </nav>
+            </div>
+            <div class="footer__widget">
+                <h3 class="footer__heading">Asistencia</h3>
+                <nav class="footer__menu">
+                    <a class="footer__enlace" href="#">Enlace 1</a>
+                    <a class="footer__enlace" href="#">Enlace 2</a>
+                    <a class="footer__enlace" href="#">Enlace 3</a>
+                    <a class="footer__enlace" href="#">Enlace 4</a>
+                </nav>
+            </div>
+        </div>
+        <div class="footer__barra contenedor">
+            <nav class="footer__barranav">
+                <a class="footer__enlace footer__enlace--barra" href="#">Enlace nuevo</a>
+                <a class="footer__enlace footer__enlace--barra" href="#">Enlace nuevo</a>
+                <a class="footer__enlace footer__enlace--barra" href="#">Enlace nuevo</a>
+                <a class="footer__enlace footer__enlace--barra" href="#">Enlace nuevo</a>
+            </nav>
+        </div>
+    </footer>
 </body>
 
 </html>
